@@ -132,12 +132,14 @@ void php_clear_mysql(MY_MYSQL *mysql) {
 }
 /* }}} */
 
-/* {{{ mysqli_objects_free_storage
+/* {{{ mysqli_objects_destroy_object
  */
-static void mysqli_objects_free_storage(zend_object *object TSRMLS_DC)
+static void mysqli_objects_destroy_object(zend_object *object, zend_object_handle handle TSRMLS_DC)
 {
 	mysqli_object 	*intern = (mysqli_object *)object;
 	MYSQLI_RESOURCE	*my_res = (MYSQLI_RESOURCE *)intern->ptr;
+
+	zend_objects_destroy_object(object, handle TSRMLS_CC);
 
 	/* link object */
 	if (instanceof_function(intern->zo.ce, mysqli_link_class_entry TSRMLS_CC)) {
@@ -164,9 +166,17 @@ static void mysqli_objects_free_storage(zend_object *object TSRMLS_DC)
 			php_clear_warnings((MYSQLI_WARNING *)my_res->info);
 		}
 	}
-	intern->ptr = NULL;
-	my_efree(my_res);
-	
+}
+/* }}} */
+
+/* {{{ mysqli_objects_free_storage
+ */
+static void mysqli_objects_free_storage(zend_object *object TSRMLS_DC)
+{
+	mysqli_object 	*intern = (mysqli_object *)object;
+	MYSQLI_RESOURCE	*my_res = (MYSQLI_RESOURCE *)intern->ptr;
+
+	my_efree(my_res);	
 	zend_object_std_dtor(&intern->zo TSRMLS_CC);
 	efree(intern);
 }
@@ -351,7 +361,7 @@ PHP_MYSQLI_EXPORT(zend_object_value) mysqli_objects_new(zend_class_entry *class_
 	zend_hash_copy(intern->zo.properties, &class_type->default_properties, (copy_ctor_func_t) zval_add_ref,
 					(void *) &tmp, sizeof(zval *));
 
-	retval.handle = zend_objects_store_put(intern, (zend_objects_store_dtor_t) zend_objects_destroy_object, (zend_objects_free_object_storage_t) mysqli_objects_free_storage, NULL TSRMLS_CC);
+	retval.handle = zend_objects_store_put(intern, (zend_objects_store_dtor_t) mysqli_objects_destroy_object, (zend_objects_free_object_storage_t) mysqli_objects_free_storage, NULL TSRMLS_CC);
 	retval.handlers = &mysqli_object_handlers;
 
 	return retval;
